--- a/P5-Extended-Kalman-Filter/CMakeLists.txt
+++ b/P5-Extended-Kalman-Filter/CMakeLists.txt
@@ -12,13 +12,17 @@ set(sources src/main.cpp src/tools.cpp src/FusionEKF.cpp src/kalman_filter.cpp s
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-include_directories(/usr/local/include)
-include_directories(/usr/local/opt/openssl/include)
-link_directories(/usr/local/lib)
-link_directories(/usr/local/opt/openssl/lib)
-link_directories(/usr/local/Cellar/libuv/1*/lib)
+# Detect Homebrew prefix (works for both Intel and ARM Macs)
+execute_process(COMMAND brew --prefix OUTPUT_VARIABLE HOMEBREW_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+include_directories(${HOMEBREW_PREFIX}/include)
+include_directories(${HOMEBREW_PREFIX}/opt/openssl@3/include)
+
+link_directories(${HOMEBREW_PREFIX}/lib)
+link_directories(${HOMEBREW_PREFIX}/opt/openssl@3/lib)
+link_directories(${HOMEBREW_PREFIX}/opt/libuv/lib)
+
+endif() 
 
 
 add_executable(ExtendedKF ${sources})
