--- a/P8-PID-Control-Project/CMakeLists.txt
+++ b/P8-PID-Control-Project/CMakeLists.txt
@@ -9,16 +9,20 @@ set(CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 
 set(sources src/PID.cpp src/main.cpp)
 
-include_directories(/usr/local/include)
-link_directories(/usr/local/lib)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-include_directories(/usr/local/opt/openssl/include)
-link_directories(/usr/local/opt/openssl/lib)
-link_directories(/usr/local/Cellar/libuv/1*/lib)
+# Detect Homebrew prefix (works for both Intel and ARM Macs)
+execute_process(COMMAND brew --prefix OUTPUT_VARIABLE HOMEBREW_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+include_directories(${HOMEBREW_PREFIX}/include)
+include_directories(${HOMEBREW_PREFIX}/opt/openssl@3/include)
+
+link_directories(${HOMEBREW_PREFIX}/lib)
+link_directories(${HOMEBREW_PREFIX}/opt/openssl@3/lib)
+link_directories(${HOMEBREW_PREFIX}/opt/libuv/lib)
+
+endif() 
 
 
 add_executable(pid ${sources})
